# lab-09-producer-consumer

./: .gitmodules  .travis.yml  CMakeLists.txt  command.txt
_builds/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
_builds/_3rdParty/Hunter/toolchain/_builds/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: krauler.hpp
sources/: krauler.cpp  main.cpp  source.cpp
tests/: test.cpp
